    (if Authen::Passphrase is installed) the next time a user logs in.
    Or `ikiwiki-transition hashpassword /path/to/srcdir` can be used to force
    a conversion.
  * Passwords will no longer be mailed, but instead a password reset link
    mailed.
  * The password_cost config setting is provided as a "more security" knob.
  * teximg: Fix logurl.

 -- Joey Hess <joeyh@debian.org>  Wed, 28 May 2008 03:07:37 -0400

ikiwiki (2.47) unstable; urgency=low

  * mdwn: Add a multimarkdown setup file option.
  * If PERL5LIB is set to the libdir when building ikiwiki, calculate and 
    hardcode a proper 'use lib' statement anyway. This fixes a gotcha,
    since PERL5LIB won't work once ikiwiki is running via a wrapper or as
    a cgi.
  * orphans: As a special case, the toplevel index page is never considered
    an orphaned page.
  * inline: Display a message if the 'pages' parameter is missing, before
    it just expanded to nothing.
  * git: Skip over signed-off-by and similar lines in commit messages
    when generating recentchanges.
  * ENV can be used in the setup file to override environment variable
    settings, such as TZ or PATH.
  * Perls older than 5.10 need to use the old method of decoding utf-8 in CGI
    values. Neither method will work for all versions of perl, so check
    version number at runtime.
  * Avoid unsightly warning message when evaling broken pagespecs.
  * Improve error message when a pagespec fails to parse.

 -- Joey Hess <joeyh@debian.org>  Sun, 25 May 2008 14:25:42 -0400

ikiwiki (2.46) unstable; urgency=low

  * amazon_s3: New plugin, which injects wiki pages into Amazon S3, allowing
    ikiwiki to be used without a dedicated web server.
  * aggregate: Add support for web-based triggering of aggregation 
    for people stuck on shared hosting without cron. (Sheesh.) Enabled
    via the `aggregate_webtrigger` configuration optiom.
  * Add pinger and pingee plugins, which allow setting up mirrors and branched