@@ -16,6 +16,7 @@ ikiwiki (2.48) UNRELEASED; urgency=low
     mailed.
   * The password_cost config setting is provided as a "more security" knob.
   * teximg: Fix logurl.
+  * teximg: If the log isn't written, avoid ugly error messages.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 28 May 2008 03:07:37 -0400
 
